[package]
name = "rweb"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = {version = "0.14", features = ["full"]}
tokio = { version = "1", features = ["full"]}
tokio-util = "0.7.10"
clap = { version = "4.4.7", features = ["derive"]}
