[package]
name = "fbws"
version = "0.0.2"
edition = "2021"
authors = ["A.K."]
description = "Experiments in rust web development"
readme = "README.md"
repository = "https://github.com/formerlybased/fbws"
license = "MIT"
keywords = ["web-development", "web-server"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = {version = "0.14", features = ["full"]}
tokio = { version = "1", features = ["full"]}
tokio-util = "0.7.10"
clap = { version = "4.4.7", features = ["derive"]}
config = "0.13.3"
